[package]
name = "wavelog-sync"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "3"
yaml_serde = "0.10.3"

[lints.clippy]
pedantic = { level = "deny", priority = -1}
nursery = { level = "deny", priority = -1}
unwrap_used = "deny"
